// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityTableToolbar DOM should render correctly - no data 1`] = `
<PrimaryToolbar
  actionsConfig={null}
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
            Object {
              "name": "Stale",
              "value": "stale",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "isDisabled": false,
      "items": Array [
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by status",
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by source",
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    <Skeleton
      isDark={false}
      size="lg"
    />
  }
  toggleIsExpanded={[Function]}
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with children 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
            Object {
              "name": "Stale",
              "value": "stale",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "isDisabled": false,
      "items": Array [
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by status",
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by source",
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "isDisabled": false,
      "itemCount": undefined,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
  toggleIsExpanded={[Function]}
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with custom activeFilters 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
            Object {
              "name": "Stale",
              "value": "stale",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
        Object {
          "category": "Some",
          "chips": Array [
            Object {
              "name": "something",
            },
            Object {
              "name": "something 2",
            },
          ],
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "isDisabled": false,
      "items": Array [
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by status",
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by source",
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
        Object {
          "filterValues": Object {
            "className": "ins-c-tagfilter",
            "filterBy": "",
            "isDisabled": false,
            "items": Array [
              Object {
                "className": "ins-c-tagfilter__tail",
                "isDisabled": true,
                "label": <span>
                   
                  <Spinner
                    size="md"
                  />
                   
                </span>,
                "value": "",
              },
            ],
            "onChange": [Function],
            "onFilter": [Function],
            "placeholder": "Filter by tags",
            "selected": Object {},
            "value": "",
          },
          "label": "Tags",
          "placeholder": "Filter system by tag",
          "type": "group",
          "value": "tags",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "isDisabled": false,
      "itemCount": undefined,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
  toggleIsExpanded={[Function]}
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with custom filters 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
            Object {
              "name": "Stale",
              "value": "stale",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "isDisabled": false,
      "items": Array [
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by status",
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by source",
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "placeholder": "Filter by filter by text",
          },
          "label": "Filter by text",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "isDisabled": false,
      "itemCount": undefined,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
  toggleIsExpanded={[Function]}
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with default filters 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "isDisabled": false,
      "items": Array [
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by status",
            "value": Array [
              "fresh",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by source",
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "isDisabled": false,
      "itemCount": undefined,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
  toggleIsExpanded={[Function]}
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with default tag filter 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
            Object {
              "name": "Stale",
              "value": "stale",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "isDisabled": false,
      "items": Array [
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by status",
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by source",
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "isDisabled": false,
      "itemCount": undefined,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
  toggleIsExpanded={[Function]}
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with items 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar ins-c-inventory__table--toolbar-has-items"
  filters={Array []}
  pagination={
    Object {
      "isDisabled": false,
      "itemCount": undefined,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
  toggleIsExpanded={[Function]}
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with no access 1`] = `
<PrimaryToolbar
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "isDisabled": true,
      "items": Array [
        Object {
          "filterValues": Object {
            "isDisabled": true,
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "isDisabled": true,
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by status",
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "isDisabled": true,
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by source",
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "isDisabled": true,
      "itemCount": 0,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
  toggleIsExpanded={[Function]}
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with no access 2`] = `
<TagsModal
  filterTagsBy=""
  onApply={[Function]}
  onToggleModal={[Function]}
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with tags 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
            Object {
              "name": "Stale",
              "value": "stale",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "isDisabled": false,
      "items": Array [
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by status",
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by source",
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
        Object {
          "filterValues": Object {
            "className": "ins-c-tagfilter",
            "filterBy": "",
            "isDisabled": false,
            "items": Array [
              Object {
                "className": "ins-c-tagfilter__tail",
                "isDisabled": true,
                "label": <span>
                   
                  <Spinner
                    size="md"
                  />
                   
                </span>,
                "value": "",
              },
            ],
            "onChange": [Function],
            "onFilter": [Function],
            "placeholder": "Filter by tags",
            "selected": Object {},
            "value": "",
          },
          "label": "Tags",
          "placeholder": "Filter system by tag",
          "type": "group",
          "value": "tags",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "isDisabled": false,
      "itemCount": undefined,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
  toggleIsExpanded={[Function]}
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with tags 2`] = `
<TagsModal
  filterTagsBy=""
  onApply={[Function]}
  onToggleModal={[Function]}
/>
`;

exports[`EntityTableToolbar DOM should render correctly 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
            Object {
              "name": "Stale",
              "value": "stale",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "isDisabled": false,
      "items": Array [
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by status",
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "isDisabled": false,
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "placeholder": "Filter by source",
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "isDisabled": false,
      "itemCount": 500,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": 1,
      "perPage": 50,
    }
  }
  toggleIsExpanded={[Function]}
/>
`;
